# jsonid

./: .gitignore  .pylintrc  CODE_OF_CONDUCT.md  README.md  donovan.py  json2encoding_util.py  json2json_util.py  justfile  pyproject.toml  write_utf.py
.github/workflows/: linting.yml  release.yml  unit-tests-all.yml
docs/jsonid/: compressionlib.html  export.html  file_processing.html  helpers.html  index.html  jsonid.html  pronom.html  registry.html  registry_data.html  registry_matchers.html
docs/registry/: index.htm  index.md
docs/utils/: json2json.html  jsonid2pronom.html
pronom_reference/: DROID_JSONID_SignatureFile.xml
requirements/: local.txt  requirements.txt
samples/encoding/: UTF-16-text.json  UTF-16BE-big5.json  UTF-16BE-float.json  UTF-16BE-int.json  UTF-16BE-list.json  UTF-16BE-list_whitespace.json  UTF-16BE-map.json  UTF-16BE-map_whitespace.json  UTF-16BE-shift_jis.json  UTF-16BE-text.json  UTF-16LE-big5.json  UTF-16LE-float.json  UTF-16LE-int.json  UTF-16LE-list_whitespace.json  UTF-16LE-map.json  UTF-16LE-map_whitespace.json  UTF-16LE-shift_jis.json  UTF-16LE-text.json  UTF-32-empty.json  UTF-32-text.json  UTF-32BE-big5.json  UTF-32BE-float.json  UTF-32BE-int.json  UTF-32BE-list.json  UTF-32BE-list_whitespace.json  UTF-32BE-map.json  UTF-32BE-map_whitespace.json  UTF-32BE-shift_jis.json  UTF-32BE-text.json  UTF-32LE-big5.json  UTF-32LE-float.json  UTF-32LE-int.json  (+6 more)
tests/: test_analysis.py  test_encodings.py  test_encodings_poc.py  test_integration.py  test_jsonl.py  test_main.py  test_spec.py  test_specific_examples.py
utils/: json2json.py
(+24 files in other folders)
