[project]

name = "python-repo-template"
dynamic = ["version", "dependencies"]

description = "A one-line description of this Python project"

readme = "README.md"

requires-python = ">=3.11"

license-files = [ "LICENSE" ]

keywords = ["template", "setuptools", "development"]

authors = [
  {name = "A. Developer", email = "author_one@example.com" },
  {name = "A.N. Other Developer", email = "author_two@example.com" },
]

maintainers = [
  {name = "A. Project Maintainer", email = "maintainer@example.com" }
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements/requirements.txt"]}

[project.urls]
"Homepage" = "https://example.com/project/"
"Bug Reports" = "https://example.com/issues/"
"Funding" = "https://example.com/funding/"
"Say Thanks!" = "http://example.com/thanks/"
"Source" = "https://example.com/sourcecode/"

[project.scripts]
template = "template.template:main"

[build-system]
requires = ["setuptools>=74.0.0", "wheel>=0.44.0", "setuptools_scm[toml]>=8.1.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
